vlib/v/parser/tests/cast_to_any_type_err.vv
fn main() {
	a := any(22)
	println(a)
}
